@@ -4,10 +4,10 @@ TODO list for gockel
 - write more tests
 - implement option "ignore_incoming" with list of accounts for which no userstream shall be started
 - add keys for "edit to retweet" and "public reply".
-- remove URL shortening
 
 done items:
 ===========
+- remove URL shortening
 - multi-account support
 - add follow/unfollow
 - implement user stream API support
