@@ -5,6 +5,7 @@ ChangeLog for gockel
 	Implemented multi-account support.
 	Implemented follow and unfollow.
 	Take length of resulting t.co URLs into account when computing remaining length
+	Removed URL shortening function since it's obsolete with the mandatory t.co URLs
 
 0.1 (2011-10-23):
 	Initial release.
